# VETi-HMD

./: .gitignore  CMakeLists.txt  README.md
driver/VETi_hmd/: driver.vrdrivermanifest
driver/VETi_hmd/resources/input/: veti_hmd_profile.json
driver/VETi_hmd/resources/localization/: localization.json
driver/VETi_hmd/resources/settings/: default.vrsettings
src/: DriverFactory.cpp
src/Driver/: DeviceType.hpp  EDID.hpp  FindMonitor.hpp  HMDDevice.cpp  HMDDevice.hpp  IVRDevice.hpp  IVRDriver.hpp  VRDriver.cpp  VRDriver.hpp
